# ypbank

./: Cargo.toml  README.md  output.txt
.github/workflows/: rust.yml
files/: simple.csv  simple.txt
profiling/: profile.json
src/: bin_format.rs  csv_format.rs  errors.rs  lib.rs  txt_format.rs
